* Black smudge caused by auto suggest div. Start with visibility hidden(style.css) [Bug 3077]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8277 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/babylon/style.css
+++ b/Themes/babylon/style.css
@@ -484,6 +484,7 @@ a.moderation_link, a.moderation_link:visited
 {
 	border: 1px solid black;
 	position: absolute;
+	visibility: hidden;
 }
 
 /* An auto suggest item */
