--- a/Themes/classic/style.css
+++ b/Themes/classic/style.css
@@ -400,6 +400,7 @@ ol.search_results li
 {
 	border: 1px solid black;
 	position: absolute;
+	visibility: hidden;
 }
 
 /* An auto suggest item */
